<resources>
    <string name="app_name">Math</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="start">Start</string>
    <string name="about_us">About Us</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rate">Rate</string>
    <string name="studio_name">Studio name</string>
    <string name="logo">Logo</string>
    <string name="equals">=</string>
    <string name="sound">Sound</string>
</resources>
